# mik-sdk

./: .gitattributes  .gitignore  .release-please-manifest.json  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  manual-release.yml  release.yml
.notes/: parallel-execution-plan.md  refactoring-order.md
docs/: astro.config.mjs  pnpm-lock.yaml
docs-dev/adr/: 001-binary-size-optimization.md  002-pure-rust-json.md  003-two-component-architecture.md  004-macro-driven-dx.md  005-error-handling-strategy.md  README.md  template.md
docs/src/content/docs/: architecture.mdx  index.mdx
docs/src/content/docs/examples/: basic.mdx  crud.mdx
docs/src/content/docs/guides/: installation.mdx  openapi.mdx  quickstart.mdx  routing.mdx  sidecars.mdx  testing.mdx  troubleshooting.mdx  types.mdx
docs/src/content/docs/practices/: helpers.mdx  patterns.mdx  service-design.mdx
docs/src/content/docs/reference/: datetime.mdx  environment.mdx  errors.mdx  http-client.mdx  logging.mdx  quick-reference.mdx  random.mdx  request.mdx  responses.mdx  sql.mdx
examples/: README.md
examples/auth-api/: Cargo.toml
examples/auth-api/src/: lib.rs
examples/crud-api/: Cargo.toml
examples/crud-api/src/: lib.rs
examples/deploy-github/: Cargo.toml  README.md  build.sh  setup.sh
examples/deploy-github/.github/workflows/: deploy.yml
examples/external-api/: Cargo.toml
examples/external-api/src/: lib.rs
examples/hello-world/: Cargo.toml  README.md  openapi.json
examples/hello-world/src/: lib.rs
examples/resilient-api/src/: lib.rs
mik-bridge/: Cargo.toml
mik-bridge/src/: lib.rs
mik-sdk/: CHANGELOG.md  Cargo.toml  README.md
mik-sdk-macros/: CHANGELOG.md  Cargo.toml
mik-sdk-macros/examples/: expand_derive.rs  expand_json.rs
mik-sdk-macros/src/: constants.rs  dx.rs  errors.rs  http_client.rs  json.rs  lib.rs  openapi.rs  response.rs  trace.rs  type_registry.rs
mik-sdk-macros/src/derive/: mod.rs  path_derive.rs  query_derive.rs  type_derive.rs
mik-sdk-macros/src/derive/type_derive/: case.rs  enum_impl.rs  mod.rs  struct_impl.rs  validation.rs
mik-sdk-macros/src/openapi/: mod.rs  routes.rs  utoipa.rs
mik-sdk-macros/src/schema/: codegen.rs  field_schema.rs  mod.rs  openapi.rs  type_schema.rs  types.rs
mik-sdk-macros/tests/: expand.rs  json_macro_test.rs  routes_integration_test.rs  schema_macro_test.rs
mik-sdk-macros/tests/expand/: derive_query.expanded.rs  derive_query.rs  derive_type_enum.expanded.rs  derive_type_enum.rs  derive_type_struct.expanded.rs  derive_type_struct.rs  ok_basic.expanded.rs  ok_basic.rs  ok_with_headers.rs  ok_with_struct.expanded.rs  ok_with_struct.rs  routes_basic.expanded.rs  routes_basic.rs
mik-sdk-macros/tests/ui/derive/: path_on_enum.stderr  path_on_tuple_struct.stderr  query_on_enum.stderr  query_on_tuple_struct.stderr  type_on_tuple_struct.stderr
mik-sdk-macros/tests/ui/pass/: type_enum.rs
mik-sdk-macros/tests/ui/routes/: invalid_input_source.stderr
mik-sdk/benches/: json.rs  parsing.rs  request.rs
mik-sdk/fuzz/fuzz_targets/: request.rs
mik-sdk/src/: constants.rs  env.rs  lib.rs  log.rs  random.rs  time.rs  wasi_http.rs
mik-sdk/src/http_client/: error.rs  mod.rs  request.rs  response.rs  ssrf.rs
mik-sdk/src/json/: builder.rs  lazy.rs  mod.rs  tests.rs  to_json.rs  value.rs
mik-sdk/src/request/: mod.rs  parsing.rs
mik-sdk/src/request/tests/: body.rs  form.rs  headers.rs  params.rs  proptest.rs  query.rs  security.rs  url_decode.rs
mik-sdk/src/typed/: mod.rs  parse_error.rs  validation_error.rs
mik-sdk/tests/: proptest_request.rs
mik-sql/: CHANGELOG.md  Cargo.toml  README.md
mik-sql-macros/: CHANGELOG.md  Cargo.toml
mik-sql-macros/examples/: expand_sql.rs
mik-sql-macros/src/: common.rs  create.rs  debug.rs  delete.rs  errors.rs  lib.rs  read.rs  types.rs  update.rs
mik-sql-macros/src/codegen/: filter.rs  mod.rs  value.rs
mik-sql-macros/src/parse/: aggregate.rs  common.rs  compute.rs  filter.rs  mod.rs
mik-sql-macros/src/read/: codegen.rs  input.rs  mod.rs
mik-sql-macros/tests/: expand.rs
mik-sql-macros/tests/expand/: sql_create_basic.expanded.rs  sql_create_basic.rs  sql_delete_basic.expanded.rs  sql_delete_basic.rs  sql_read_basic.expanded.rs  sql_read_basic.rs  sql_update_basic.expanded.rs  sql_update_basic.rs
mik-sql/benches/: sql_builder.rs
mik-sql/src/: dialect.rs  lib.rs
mik-sql/src/builder/: delete.rs  filter.rs  insert.rs  mod.rs  parse.rs  select.rs  types.rs  update.rs
mik-sql/src/pagination/: cursor.rs  encoding.rs  keyset.rs  mod.rs  page_info.rs  value_conv.rs
mik-sql/src/validate/: column.rs  expression.rs  filter.rs  mod.rs
scripts/: find_large_rs.py
tests-integration/: Cargo.toml
tests-integration/tests/: wasm_component.rs  wasm_e2e.rs
