[package]
name = "mik-sdk-macros"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Proc-macros for mik-sdk - routes!, ok!, error!, fetch!, derive macros"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }

[dev-dependencies]
# Uses package rename to avoid release-please cargo-workspace cycle detection
# See: https://github.com/googleapis/release-please/issues/1662
# The crate is still imported as `mik_sdk` in code
mik_sdk = { path = "../mik-sdk", package = "mik-sdk" }
trybuild = "1.0"
