[package]
name = "mik-sql-macros"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Procedural macros for mik-sql query builder"

[lib]
proc-macro = true

[features]
default = []
# Debug feature: print pretty-formatted macro expansions to stderr
debug-expand = ["dep:prettyplease"]
# Trace feature: print parsing/codegen steps to stderr
macro-trace = []

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
# Optional: pretty-print generated code (only with debug-expand feature)
prettyplease = { version = "0.2", optional = true }

[dev-dependencies]
# Uses package rename to avoid release-please cargo-workspace cycle detection
# See: https://github.com/googleapis/release-please/issues/1662
mik_sql = { path = "../mik-sql", package = "mik-sql" }
trybuild = "1.0"
macrotest = "1.0"
# Snapshot testing for macro expansion verification
insta = "1.46"

[lints]
workspace = true
