[package]
name = "mik-sql"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "SQL query builder with Mongo-style filters - sql_read!, sql_create!, sql_update!, sql_delete!"
keywords = ["sql", "query-builder", "postgres", "sqlite", "macros"]
categories = ["database"]

[lib]
crate-type = ["rlib"]

[features]
default = []

[dependencies]
mik-sql-macros = { path = "../mik-sql-macros", version = "0.1.0" }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
insta = { workspace = true }

[[bench]]
name = "sql_builder"
harness = false
