[package]
name = "mik-sdk-integration-tests"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
wasmtime = { version = "29", features = ["component-model"] }
anyhow = "1"

[dev-dependencies]
# Simple HTTP client for E2E tests
ureq = { version = "2", features = ["json"] }
serde_json = "1"

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"

[[test]]
name = "wasm_component"
path = "tests/wasm_component.rs"

[[test]]
name = "wasm_e2e"
path = "tests/wasm_e2e.rs"

# Not part of parent workspace - run separately
[workspace]
