[package]
name = "crud-api"
version = "0.0.2"
edition.workspace = true
publish = false
description = "Example CRUD API demonstrating REST patterns and error handling"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# No serde/serde_json - JSON comes from router via WIT import
wit-bindgen-rt = "0.44.0"
mik-sdk = { path = "../../mik-sdk" }
mik-sql = { path = "../../mik-sql" }

[package.metadata.component]
package = "mik:crud-api"

[package.metadata.component.target]
path = "wit"
world = "crud-api"

[package.metadata.component.target.dependencies]
"mik:core" = { path = "wit/deps/core" }
"wasi:cli" = { path = "wit/deps/cli" }
"wasi:clocks" = { path = "wit/deps/clocks" }
"wasi:io" = { path = "wit/deps/io" }
"wasi:random" = { path = "wit/deps/random" }
"wasi:filesystem" = { path = "wit/deps/filesystem" }
"wasi:sockets" = { path = "wit/deps/sockets" }
