[package]
name = "my-api"
version = "0.1.0"
edition = "2024"
publish = false

# Standalone - not part of parent workspace
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = "0.44.0"
mik-sdk = "0.1"

[package.metadata.component]
package = "mik:my-api"

[package.metadata.component.target]
path = "wit"
world = "my-api"

# WIT deps pulled by CI from ghcr.io/dufeutech/mik-sdk-wit
[package.metadata.component.target.dependencies]
"mik:core" = { path = "wit/deps/core" }
"wasi:cli" = { path = "wit/deps/cli" }
"wasi:clocks" = { path = "wit/deps/clocks" }
"wasi:io" = { path = "wit/deps/io" }
"wasi:random" = { path = "wit/deps/random" }
"wasi:filesystem" = { path = "wit/deps/filesystem" }
"wasi:sockets" = { path = "wit/deps/sockets" }
