[package]
name = "hello-world"
version = "0.0.2"
edition.workspace = true
publish = false
description = "Example handler using shared JSON from router"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# No serde/serde_json - JSON comes from router via WIT import
wit-bindgen-rt = "0.44.0"
mik-sdk = { path = "../../mik-sdk" }

[package.metadata.component]
package = "mik:hello-world"

[package.metadata.component.target]
path = "wit"
world = "hello-world"

[package.metadata.component.target.dependencies]
"mik:core" = { path = "wit/deps/core" }
"wasi:cli" = { path = "wit/deps/cli" }
"wasi:clocks" = { path = "wit/deps/clocks" }
"wasi:io" = { path = "wit/deps/io" }
"wasi:random" = { path = "wit/deps/random" }
"wasi:filesystem" = { path = "wit/deps/filesystem" }
"wasi:sockets" = { path = "wit/deps/sockets" }
